# dbt-4ps-staging

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  mise.toml  mkdocs.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: ci.yml  docs.yml  release.yml
_cdm/: Currency-4.cdm.json  Customer-18.cdm.json  PaymentTerms-3.cdm.json  README.md  deltas.manifest.cdm.json
dbt_4ps_staging_generator/: README.md  cdm.py  converters.py  databricks_helper.py  dbt.py  main.py  pyproject.toml  sql.py
dbt_4ps_staging_generator/src/dbt_4ps_generator/: __init__.py  cdm.py  cli.py  converters.py  databricks_helper.py  dbt.py  sql.py
dbt_4ps_staging_generator/tests/: test_converters.py  test_generate.py
dbt_4ps_staging_package/: README.md  package-lock.yml  profiles.yml  pyproject.toml
dbt_4ps_staging_package/models/staging/4ps/: _4ps__models.yaml  stg_4ps__acc_schedule_line.sql  stg_4ps__budget_adjustment.sql  stg_4ps__budget_adjustment_type.sql  stg_4ps__budget_line.sql  stg_4ps__comment_line.sql  stg_4ps__contact.sql  stg_4ps__control_project_cost_component.sql  stg_4ps__control_project_cost_object.sql  stg_4ps__control_project_cost_type.sql  stg_4ps__control_project_element.sql  stg_4ps__cost_component.sql  stg_4ps__country_region.sql  stg_4ps__cust_ledger_entry.sql  stg_4ps__customer_discount_group.sql  stg_4ps__customer_price_group.sql  stg_4ps__detailed_cust_ledg_entry.sql  stg_4ps__detailed_vendor_ledg_entry.sql  stg_4ps__dimension_set_entry.sql  stg_4ps__dimension_value.sql  stg_4ps__discipline.sql  stg_4ps__employee.sql  stg_4ps__extension_contract.sql  stg_4ps__field.sql  stg_4ps__gen_business_posting_group.sql  stg_4ps__gl_account.sql  stg_4ps__gl_account_category.sql  stg_4ps__gl_budget_entry.sql  stg_4ps__gl_budget_name.sql  stg_4ps__gl_entry.sql  stg_4ps__hil_birds_enum.sql  stg_4ps__hil_birds_enum_translation.sql  stg_4ps__hour_accounting.sql  stg_4ps__hour_accounting_line.sql  stg_4ps__item.sql  stg_4ps__item_category.sql  stg_4ps__item_journal_line.sql  stg_4ps__item_ledger_entry.sql  stg_4ps__job.sql  stg_4ps__job_ledger_entry.sql  (+32 more)
docs/: cdm-metadata.md  development.md  example-project.md  generator.md  getting-started.md  index.md  package.md
example_dbt_project/: README.md  dbt_project.yml  pyproject.toml
example_dbt_project/models/staging/4ps/: _4ps__models.yaml  stg_4ps__currency.sql  stg_4ps__customer.sql
